--- a/web/nginx/sites-available/dev-release.ihtsdotools.org
+++ b/web/nginx/sites-available/dev-release.ihtsdotools.org
@@ -1,7 +1,7 @@
 server {
 
-        listen 80;
-        server_name dev-release.snomedtools.org dev-release.ihtsdotools.org;
+		listen 80;
+		server_name dev-release.snomedtools.org dev-release.ihtsdotools.org;
 	location /api {
 		proxy_set_header	Host	$host;
 		proxy_set_header	X-Forwarded-For	$proxy_add_x_forwarded_for;
@@ -9,8 +9,9 @@ server {
 		proxy_redirect		http://localhost/api default;
 	}
 
-        location / {
+	location / {
 		root /var/www/snomed-release-service-web/src/html;
+		return 301 https://dev-release.ihtsdotools.org$request_uri;
 	}
 	
 	location /cgi-bin {
